examples/errors/mapping/go.sum
github.com/sktylr/routeit v1.0.1 h1:oOY/Ifi8O5PsNH27H8vA4tSLvj7f8p+5jTDVclvqDbU=
github.com/sktylr/routeit v1.0.1/go.mod h1:EZOD7GOrqszUM3TES5VL8oSmFxa2t6yYQXPVaNxswE0=
